# AIML-Data-Science

./: .gitignore  README.md
AIML/Amazon Product Sentiment Analysis/: .gitignore  README.md  requirements.txt
AIML/Amazon Reviews Sentiment/: README.md  requirements.txt
AIML/Car Demage/: .gitignore  README.md  requirements.txt
AIML/Crew AI Programming Team/: .env.example  .gitignore  README.md  gradio_app.py  make_report.py  pyproject.toml  streamlit_app.py
AIML/Crew AI Programming Team/src/engineering_team/: crew.py  main.py
AIML/Crew AI Programming Team/src/engineering_team/config/: agents.yaml  tasks.yaml
AIML/Plant Disease/: README.md  requirements.txt  run_all.py
AIML/SMS Spam Detection/: README.md  requirements.txt  run_all.py
AIML/Steel Plant Manufacturing Fault/: .gitignore  README.md  make_report.py  requirements.txt
Data-Science/Credit Card  Fraud Detection/: make_report.py
Data-Science/Employee Retention Data/: .gitignore  README.md  main.py  requirements.txt
Data-Science/Energy consumption Pediction/: Energy_Consumption_Prediction.html  Energy_Consumption_Prediction.ipynb  Energy_Consumption_Prediction_Report.docx  INPUT DATA.txt  README.md  build_report.js  energy_pipeline.py
Data-Science/House Regression/: .gitignore  House_Prices_Report.docx  README.md  build_notebook.py  build_report.js  house_prices.py  make_report.py  requirements.txt  streamlit_app.py
Data-Science/House pricing/: .gitignore  README.md  main.py  make_report.py  requirements.txt
Data-Science/Network Intrusion Detection/: README.md  requirements.txt  (+1 more)
(+282 files in other folders)
